Terminamos funcion Contactanos. Otros.

--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -133,7 +133,7 @@
   <!--======================================== -->
   <!--=== INFORMACION UNETE A LAS MISIONES === -->
   <!--======================================== -->
-  <app-joinus-info></app-joinus-info>
+  <!-- <app-joinus-info></app-joinus-info> -->
 
   <!--======================================== -->
   <!--========= UNETE A LAS MISIONES ========= -->
