--- a/src/app/layouts/home/joinus-missions/joinus-missions.component.html
+++ b/src/app/layouts/home/joinus-missions/joinus-missions.component.html
@@ -22,19 +22,19 @@
               <!-- Nombre -->
               <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Nombre</mat-label>
-                  <input matInput formControlName="nombre" name="nombre" required>
+                  <input matInput formControlName="nombre" name="nombre" placeholder="Escribe tu nombre tal como aparece en tu identificación." required>
               </mat-form-field>
         
               <!-- Apellidos -->
               <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Apellidos</mat-label>
-                  <input matInput formControlName="apellidos" name="apellidos" required>
+                  <input matInput formControlName="apellidos" name="apellidos" placeholder="Introduce tus apellidos." required>
               </mat-form-field>
         
               <!-- Correo electrónico -->
               <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Correo electrónico</mat-label>
-                  <input matInput formControlName="email" name="email" required>
+                  <input matInput formControlName="email" name="email" placeholder="Asegúrate de ingresar un correo al que tengamos acceso directo para mantenerte informado." required>
                   <mat-error *ngIf="misioneroForm.get('email')?.touched && misioneroForm.get('email')?.errors?.['invalidEmail']">
                     Ingresa un correo válido.
                   </mat-error>
@@ -43,19 +43,19 @@
               <!-- Número de teléfono y Cumpleaños -->
               <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Número de teléfono</mat-label>
-                  <input matInput formControlName="telefono" name="telefono" required>
+                  <input matInput formControlName="telefono" name="telefono" placeholder="Incluye tu código de país para poder contactarte sin problemas." required>
                   <mat-error *ngIf="misioneroForm.get('telefono')?.touched && misioneroForm.get('telefono')?.errors?.['invalidPhone']">
-                    Teléfono no válido. Formato: signo más, prefijo del país, y número. Ejemplo: +34123456789. 
+                    Teléfono no válido. Introduce el prefijo internacional. Ejemplo: +34123456789. 
                   </mat-error>
               </mat-form-field>
 
               <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Localidad</mat-label>
-                  <input matInput formControlName="localidad" name="localidad" required>
+                  <input matInput formControlName="localidad" name="localidad" placeholder="Municipio, ciudad o pueblo donde resides." required>
               </mat-form-field>
 
               <mat-form-field appearance="outline" class="full-width">
-                  <mat-label>País</mat-label>
+                  <mat-label>País donde vives</mat-label>
                   <mat-select formControlName="pais" name="pais" required>
                       <mat-option value="Afganistán">Afganistán</mat-option>
                       <mat-option value="Albania">Albania</mat-option>
@@ -169,8 +169,8 @@
 
 
               <mat-form-field appearance="outline" class="full-width">
-                  <mat-label>Su testimonio de cómo conoció al Señor Jesucristo</mat-label>
-                  <textarea matInput formControlName="testimonio" name="testimonio" rows="4" placeholder="Escríbenos de una manera resumida tu testimonio de cómo conociste a Cristo." required></textarea>
+                  <mat-label>Su testimonio de cómo conoció al Señor Jesús Cristo</mat-label>
+                  <textarea matInput formControlName="testimonio" name="testimonio" rows="4" placeholder="En pocas palabras, cuéntanos cómo conociste a Cristo y cómo ha transformado tu vida." required></textarea>
                   <mat-error *ngIf="misioneroForm.get('testimonio')?.touched && misioneroForm.get('testimonio')?.errors?.['maxLengthExceeded']">
                       Longitud máxima de 4000 caracteres alcanzado.
                   </mat-error>
@@ -182,8 +182,8 @@
                       <mat-option value="es">Español - ES</mat-option>
                       <mat-option value="en">English - EN</mat-option>
                       <mat-option value="de">Deutsch - DE</mat-option>
-                      <mat-option value="ro">Română - RO</mat-option>
-                      <mat-option value="pt">Português - PT</mat-option>
+                      <!-- <mat-option value="ro">Română - RO</mat-option> -->
+                      <!-- <mat-option value="pt">Português - PT</mat-option> -->
                   </mat-select>
               </mat-form-field>
           
