--- a/src/app/layouts/home/tenyears-experience/tenyears-experience.component.scss
+++ b/src/app/layouts/home/tenyears-experience/tenyears-experience.component.scss
@@ -72,7 +72,7 @@
                       // background-repeat: repeat-y; // Solo en vertical (elige una de las dos)
 
                       backdrop-filter: blur(10px); // Efecto de vidrio esmerilado
-                      opacity: 0.7; //Reduce la opacidad al 80%
+                    //   opacity: 1; //Reduce la opacidad al 80%
                       
                   } //end canvas
 
