--- a/src/app/shared/contact-us-modal/contact-us-modal.component.html
+++ b/src/app/shared/contact-us-modal/contact-us-modal.component.html
@@ -1,18 +1,52 @@
 <h2 mat-dialog-title>Enviar mensaje</h2>
-<mat-dialog-content>
-  <!-- Campo de texto largo -->
-  <mat-form-field appearance="outline" class="full-width mt-2">
-    <mat-label>¿En qué te podemos ayudar?</mat-label>
-    <textarea matInput [(ngModel)]="mensaje" name="mensaje" required></textarea>
-  </mat-form-field>
 
-  <!-- Campo de correo electrónico -->
-  <mat-form-field appearance="outline" class="full-width">
-    <mat-label>Escríbenos tu e-mail</mat-label>
-    <input matInput [(ngModel)]="email" name="email" required email>
-  </mat-form-field>
+<mat-dialog-content>
+
+    <form [formGroup]="contactForm">
+        <!-- Campo de texto largo -->
+        <mat-form-field appearance="outline" class="full-width mt-2">
+            <mat-label>¿En qué te podemos ayudar?</mat-label>
+            <!-- <textarea matInput [(ngModel)]="mensaje" name="mensaje" required></textarea> -->
+            <textarea matInput formControlName="message" name="message" rows="4" placeholder="Pregúntanos lo que quieras." required></textarea>
+            <mat-error *ngIf="contactForm.get('testimonio')?.touched && contactForm.get('testimonio')?.errors?.['maxLengthExceeded']">
+                Longitud máxima de 4000 caracteres alcanzado.
+            </mat-error>
+        </mat-form-field>
+
+        <!-- Campo de correo electrónico -->
+        <mat-form-field appearance="outline" class="full-width">
+            <mat-label>Escríbenos tu correo electrónico</mat-label>
+            <!-- <input matInput [(ngModel)]="email" name="email" required email> -->
+            <input matInput formControlName="email" name="email" placeholder="Escríbenos un correo al que podamos responderte." required>
+
+            <mat-error *ngIf="contactForm.get('email')?.touched && contactForm.get('email')?.errors?.['invalidEmail']">
+              Ingresa un correo válido.
+            </mat-error>
+        </mat-form-field>
+    
+
+      <!-- Mensaje de éxito -->
+      <!-- <div *ngIf="enviadoConExito">
+          <div class="container mt-2">
+              <div class="alert alert-success text-dark" role="alert">
+                  Correo electrónico enviado con éxito. Responderemos a la mayor brevedad con el mejor servicio que podamos servirle. Muchas gracias por contactar con nosotros. Atentamente equipo de GAMA.
+              </div>
+          </div>
+      </div> -->
+      <!-- Mensaje de error -->
+      <div *ngIf="envioFallido">
+        <div class="container mt-2">
+            <div class="alert alert-danger text-dark" role="alert">
+                Hubo un error al enviar el correo electrónico Por favor, inténtalo de nuevo.
+            </div>
+        </div>
+      </div> 
+
+  </form>
+
 </mat-dialog-content>
+
 <mat-dialog-actions class="dialog-actions">
-  <button mat-button (click)="onCancel()" class="cancel-button">Cancelar</button>
-  <button mat-button (click)="onEnviar()" [disabled]="!mensaje || !email" class="enviar-button">Enviar</button>
+    <button mat-button (click)="onCancel()" class="cancel-button">Cancelar</button>
+    <button mat-button (click)="onEnviar()" [disabled]="contactForm.invalid" class="enviar-button">Enviar</button>
 </mat-dialog-actions>
