--- a/src/app/shared/legal-notice-modal/legal-notice-modal.component.scss
+++ b/src/app/shared/legal-notice-modal/legal-notice-modal.component.scss
@@ -1,38 +1,47 @@
-#legal-notice {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    font-family: Arial, sans-serif;
+
+mat-dialog-content {
+
+    font-size: 14px !important;
     line-height: 1.6;
-    color: #333;
-  
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      color: #007bff;
+
+
+    #legal-notice {
+
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        color: #333;
+      
+        h2 {
+          font-size: 1.6rem;
+          margin-bottom: 20px;
+          color: #007bff;
+        }
+      
+        h3 {
+          font-size: 1.3rem;
+          margin-top: 20px;
+          margin-bottom: 10px;
+          color: #0056b3;
+        }
+      
+        p {
+          margin-bottom: 15px;
+        }
+      
+        ul {
+          margin-bottom: 15px;
+          padding-left: 20px;
+      
+          li {
+            margin-bottom: 10px;
+          }
+        }
+      
+        strong {
+          color: #0056b3;
+        }
     }
-  
-    h3 {
-      font-size: 1.5rem;
-      margin-top: 20px;
-      margin-bottom: 10px;
-      color: #0056b3;
-    }
-  
-    p {
-      margin-bottom: 15px;
-    }
-  
-    ul {
-      margin-bottom: 15px;
-      padding-left: 20px;
-  
-      li {
-        margin-bottom: 10px;
-      }
-    }
-  
-    strong {
-      color: #0056b3;
-    }
-  }
+}
