--- a/src/app/shared/privacy-modal/privacy-modal.component.scss
+++ b/src/app/shared/privacy-modal/privacy-modal.component.scss
@@ -1,59 +1,61 @@
 
 mat-dialog-content {
 
-  font-size: 16px;
-  line-height: 1.6;
-
-
-  
-  #privacy-policy {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    font-family: Arial, sans-serif;
+    font-size: 14px !important;
     line-height: 1.6;
-    color: #333;
 
-    // h2 {
-    //   color: #3f51b5; // Color del título
-    // }
-  
-  
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      color: #007bff;
+
+    
+    #privacy-policy {
+
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        color: #333;
+
+        // h2 {
+        //   color: #3f51b5; // Color del título
+        // }
+      
+      
+        h2 {
+          font-size: 1.6rem;
+          margin-bottom: 20px;
+          color: #007bff;
+        }
+      
+        h3 {
+          font-size: 1.3rem;
+          margin-top: 20px;
+          margin-bottom: 10px;
+          color: #0056b3;
+        }
+      
+        p {
+          margin-bottom: 15px;
+        }
+      
+        ul {
+          margin-bottom: 15px;
+          padding-left: 20px;
+      
+          li {
+            margin-bottom: 10px;
+          }
+        }
+      
+        strong {
+          color: #0056b3;
+        }
+
     }
-  
-    h3 {
-      font-size: 1.5rem;
-      margin-top: 20px;
-      margin-bottom: 10px;
-      color: #0056b3;
-    }
-  
-    p {
-      margin-bottom: 15px;
-    }
-  
-    ul {
-      margin-bottom: 15px;
-      padding-left: 20px;
-  
-      li {
-        margin-bottom: 10px;
-      }
-    }
-  
-    strong {
-      color: #0056b3;
-    }
-  }
 
 }
 
 
 mat-dialog-actions {
-  justify-content: flex-end; // Alinea el botón a la derecha
+    justify-content: flex-end; // Alinea el botón a la derecha
 }
 
