--- a/src/app/layouts/home/joinus-missions/joinus-missions.component.html
+++ b/src/app/layouts/home/joinus-missions/joinus-missions.component.html
@@ -23,19 +23,28 @@
               <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Nombre</mat-label>
                   <input matInput formControlName="nombre" name="nombre" placeholder="Escribe tu nombre tal como aparece en tu identificación." required>
+                  <mat-error *ngIf="misioneroForm.get('nombre')?.touched && misioneroForm.get('nombre')?.errors?.['required']">
+                    Campo obligatorio. 
+                  </mat-error>
               </mat-form-field>
         
               <!-- Apellidos -->
               <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Apellidos</mat-label>
                   <input matInput formControlName="apellidos" name="apellidos" placeholder="Introduce tus apellidos." required>
+                  <mat-error *ngIf="misioneroForm.get('apellidos')?.touched && misioneroForm.get('apellidos')?.errors?.['required']">
+                    Campo obligatorio. 
+                  </mat-error>
               </mat-form-field>
         
               <!-- Correo electrónico -->
               <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Correo electrónico</mat-label>
                   <input matInput formControlName="email" name="email" placeholder="Asegúrate de ingresar un correo al que tengamos acceso directo para mantenerte informado." required>
-                  <mat-error *ngIf="misioneroForm.get('email')?.touched && misioneroForm.get('email')?.errors?.['invalidEmail']">
+                  <mat-error *ngIf="misioneroForm.get('email')?.touched && misioneroForm.get('email')?.errors?.['required']">
+                    Campo obligatorio. 
+                  </mat-error>
+                  <mat-error *ngIf="misioneroForm.get('email')?.touched && misioneroForm.get('email')?.errors?.['invalidEmail'] && !misioneroForm.get('email')?.errors?.['required']">
                     Ingresa un correo válido.
                   </mat-error>
               </mat-form-field>
@@ -44,6 +53,9 @@
               <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Número de teléfono</mat-label>
                   <input matInput formControlName="telefono" name="telefono" placeholder="Incluye el prefijo internacional de tu país para poder contactarte sin problemas." required>
+                  <mat-error *ngIf="misioneroForm.get('telefono')?.touched && misioneroForm.get('telefono')?.errors?.['required']">
+                    Campo obligatorio. 
+                  </mat-error>
                   <mat-error *ngIf="misioneroForm.get('telefono')?.touched && misioneroForm.get('telefono')?.errors?.['invalidPhone']">
                     Teléfono no válido. Introduce el prefijo internacional. Ejemplo: +34123456789. 
                   </mat-error>
@@ -52,10 +64,13 @@
               <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Localidad</mat-label>
                   <input matInput formControlName="localidad" name="localidad" placeholder="Municipio, ciudad o pueblo donde resides." required>
+                  <mat-error *ngIf="misioneroForm.get('localidad')?.touched && misioneroForm.get('localidad')?.errors?.['required']">
+                    Campo obligatorio. 
+                  </mat-error>
               </mat-form-field>
 
               <mat-form-field appearance="outline" class="full-width">
-                  <mat-label>País donde vives</mat-label>
+                  <mat-label>País donde resides</mat-label>
                   <mat-select formControlName="pais" name="pais" required>
                       <mat-option value=""></mat-option>
                       <mat-option value="Afganistán">Afganistán</mat-option>
@@ -166,12 +181,18 @@
                       <mat-option value="Venezuela">Venezuela</mat-option>
                       <mat-option value="Vietnam">Vietnam</mat-option>
                   </mat-select>
+                  <mat-error *ngIf="misioneroForm.get('pais')?.touched && misioneroForm.get('pais')?.errors?.['required']">
+                    Campo obligatorio. 
+                  </mat-error>
               </mat-form-field>
 
 
               <mat-form-field appearance="outline" class="full-width">
                   <mat-label>Su testimonio de cómo conoció al Señor Jesús Cristo</mat-label>
                   <textarea matInput formControlName="testimonio" name="testimonio" rows="4" placeholder="En pocas palabras, cuéntanos cómo conociste a Cristo y cómo ha transformado tu vida." required></textarea>
+                  <mat-error *ngIf="misioneroForm.get('testimonio')?.touched && misioneroForm.get('testimonio')?.errors?.['required']">
+                    Campo obligatorio. 
+                  </mat-error>
                   <mat-error *ngIf="misioneroForm.get('testimonio')?.touched && misioneroForm.get('testimonio')?.errors?.['maxLengthExceeded']">
                       Longitud máxima de 4000 caracteres alcanzado.
                   </mat-error>
@@ -187,6 +208,9 @@
                       <!-- <mat-option value="ro">Română - RO</mat-option> -->
                       <!-- <mat-option value="pt">Português - PT</mat-option> -->
                   </mat-select>
+                  <mat-error *ngIf="misioneroForm.get('idioma')?.touched && misioneroForm.get('idioma')?.errors?.['required']">
+                    Campo obligatorio. 
+                  </mat-error>
               </mat-form-field>
           
               <!-- Checkbox de privacidad -->
